--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-firebase/app": "^17.4.3",
+    "@react-native-firebase/messaging": "^17.4.3",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "expo": "~48.0.11",
+    "expo-camera": "^13.2.1",
+    "expo-dev-client": "~2.2.1",
+    "expo-media-library": "^15.2.3",
+    "expo-notifications": "^0.18.1",
+    "expo-sharing": "^11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.7",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-maps": "1.3.2",
+    "react-native-screens": "^3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
