--- a/package.json
+++ b/package.json
@@ -19,19 +19,21 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.11",
-    "expo-camera": "^13.2.1",
+    "expo-camera": "~13.2.1",
     "expo-dev-client": "~2.2.1",
-    "expo-media-library": "^15.2.3",
-    "expo-notifications": "^0.18.1",
-    "expo-sharing": "^11.2.2",
+    "expo-media-library": "~15.2.3",
+    "expo-notifications": "~0.18.1",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-maps": "1.3.2",
-    "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
+    "expo-device": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
